# Auto-Xiangqi

./: .gitignore  CMakeLists.txt  Chess98.sln  DEV.md  README.md  TODO.md
Chess98/: CMakeLists.txt  Chess98.vcxproj  Chess98.vcxproj.filters  base.hpp  bitboard.hpp  board.hpp  book.hpp  evaluate.hpp  hash.hpp  heuristic.hpp  history_heuristic.hpp  main.cpp  moves.hpp  nnuefile.hpp  search.hpp  server.js  test.hpp  traverse.cpp  ui.hpp  utils.hpp
ChessUI/: index.html  ui.py
Tests/Auto/: webdriver.js
Tests/UI/: index.html  server.js
Tools/Auto/: package-lock.json  package.json  webdriver.js
Tools/UI/: server.js  ui.html
Tools/auto/: p.js  z.js
Tools/chess_matrix_convert/: rc4.py
Training/: convert.py  model.py  train.py
UI/: index.html  package.json  server.js  webdriver.js
enc_temp_folder/2be55be1888988f4a47254d0e1434858/: test.hpp
nnue/: base.py  board.py  eval.py  matrix.py  model.py  nnue.py  quantization.py  repeat_start.bat  statstic.py  train.py
tools/auto/: z.js
tools/ui/: ui.html
